--- a/.github/workflows/devsecops-pipeline.yml
+++ b/.github/workflows/devsecops-pipeline.yml
@@ -1,4 +1,5 @@
 name: Bogazici-DevSecOps-Pipeline
+
 on:
   push:
     branches:
@@ -14,35 +15,35 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        
+
       - name: Check if Dockerfile exists
         run: |
           if [ -f "Dockerfile" ]; then
             echo "✅ Dockerfile found"
-            cat Dockerfile
           else
-            echo "❌ Dockerfile not found, creating a simple one..."
-            echo "FROM node:16-alpine" > Dockerfile
-            echo "WORKDIR /app" >> Dockerfile
-            echo "COPY package*.json ./" >> Dockerfile
-            echo "RUN npm install" >> Dockerfile
-            echo "COPY . ." >> Dockerfile
-            echo "EXPOSE 3000" >> Dockerfile
-            echo "CMD [\"npm\", \"start\"]" >> Dockerfile
+            echo "❌ No Dockerfile, creating a simple one..."
+            cat <<'EOF' > Dockerfile
+            FROM node:16-alpine
+            WORKDIR /app
+            COPY package*.json ./
+            RUN npm install
+            COPY . .
+            EXPOSE 3000
+            CMD ["npm","start"]
+            EOF
           fi
-          
+
       - name: Build Docker image
         run: |
           echo "🔨 Building Docker image..."
           docker build -t juice-shop:${{ github.sha }} . || {
-            echo "❌ Docker build failed, but continuing pipeline..."
+            echo "❌ Docker build failed, continuing pipeline..."
             exit 0
           }
-          echo "✅ Docker build completed"
-          
+
       - name: Syft SBOM Scan
         uses: anchore/sbom-action@v0.15.3
         with:
@@ -50,7 +51,7 @@ jobs:
           output-file: "sbom.spdx.json"
           format: "spdx-json"
         continue-on-error: true
-        
+
       - name: Upload SBOM
         uses: actions/upload-artifact@v4
         if: always()
@@ -60,64 +61,28 @@ jobs:
           retention-days: 30
 
   semgrep-sast:
-    name: Run Semgrep SAST  
+    name: Run Semgrep SAST
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
-      - name: Create sample files if needed
-        run: |
-          echo "📝 Checking for source files..."
-          find . -name "*.js" -o -name "*.py" -o -name "*.java" | head -5
-          
-          # Eğer kaynak dosya yoksa örnek bir dosya oluştur
-          if [ ! -f "app.js" ] && [ ! -f "index.js" ] && [ ! -f "server.js" ]; then
-            echo "Creating sample app.js for scanning..."
-            cat > app.js << 'EOF'
-          const express = require('express');
-          const app = express();
-          
-          // Potential security issue - SQL injection vulnerable
-          app.get('/user/:id', (req, res) => {
-            const query = "SELECT * FROM users WHERE id = " + req.params.id;
-            console.log(query);
-            res.json({message: "User data"});
-          });
-          
-          app.listen(3000);
-          EOF
-          fi
-          
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-          
+
       - name: Install Semgrep
         run: |
           echo "📦 Installing Semgrep..."
           python -m pip install --upgrade pip
           pip install semgrep
-          semgrep --version
-          
+
       - name: Run Semgrep scan
         run: |
-          echo "🔍 Running Semgrep SAST scan..."
-          semgrep --config=auto --json --output=semgrep-report.json --verbose || {
-            echo "⚠️ Semgrep scan completed with warnings"
-            echo "{\"results\": [], \"errors\": []}" > semgrep-report.json
-          }
-          echo "✅ Semgrep scan completed"
-          
-      - name: Display scan results
-        run: |
-          echo "📊 Scan Results Summary:"
-          if [ -f "semgrep-report.json" ]; then
-            echo "Report file size: $(wc -c < semgrep-report.json) bytes"
-            echo "Number of findings: $(cat semgrep-report.json | jq '.results | length' 2>/dev/null || echo 'N/A')"
-          fi
-          
+          echo "🔍 Running Semgrep..."
+          semgrep --config=auto --json --output=semgrep-report.json || true
+
       - name: Upload Semgrep Report
         uses: actions/upload-artifact@v4
         if: always()
@@ -126,18 +91,38 @@ jobs:
           path: semgrep-report.json
           retention-days: 30
 
+  gitleaks-secrets:
+    name: Gitleaks Secret Scan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run Gitleaks
+        uses: gitleaks/gitleaks-action@v2
+        with:
+          args: detect --source . --report-format json --report-path gitleaks-report.json || true
+
+      - name: Upload Gitleaks Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: gitleaks-report-${{ github.run_number }}
+          path: gitleaks-report.json
+          retention-days: 30
+
   pipeline-summary:
     name: Pipeline Summary
     runs-on: ubuntu-latest
-    needs: [build-and-syft, semgrep-sast]
+    needs: [build-and-syft, semgrep-sast, gitleaks-secrets]
     if: always()
     steps:
       - name: Pipeline Summary
         run: |
-          echo "## 🛡️ DevSecOps Pipeline Summary" >> $GITHUB_STEP_SUMMARY
-          echo "| Job | Status |" >> $GITHUB_STEP_SUMMARY  
+          echo "## DevSecOps Pipeline Summary" >> $GITHUB_STEP_SUMMARY
+          echo "| Job | Status |" >> $GITHUB_STEP_SUMMARY
           echo "|-----|--------|" >> $GITHUB_STEP_SUMMARY
           echo "| Build & SBOM | ${{ needs.build-and-syft.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "| SAST Scan | ${{ needs.semgrep-sast.result }} |" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Pipeline completed successfully!" >> $GITHUB_STEP_SUMMARY
+          echo "| SAST (Semgrep) | ${{ needs.semgrep-sast.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "| Secret Scan (Gitleaks) | ${{ needs.gitleaks-secrets.result }} |" >> $GITHUB_STEP_SUMMARY
+          echo "Pipeline completed." >> $GITHUB_STEP_SUMMARY
